@@ -3,22 +3,22 @@ package com.github.chyern.connect.registered;
 import com.github.chyern.common.enums.ChyernErrorEnum;
 import com.github.chyern.common.exception.ChyernException;
 import com.github.chyern.connect.annotation.Connect;
-import com.github.chyern.connect.annotation.method.DELETE;
-import com.github.chyern.connect.annotation.method.GET;
-import com.github.chyern.connect.annotation.method.POST;
-import com.github.chyern.connect.annotation.method.PUT;
+import com.github.chyern.connect.annotation.method.RequestMapping;
 import com.github.chyern.connect.annotation.resource.Body;
 import com.github.chyern.connect.annotation.resource.Path;
 import com.github.chyern.connect.annotation.resource.Query;
 import com.github.chyern.connect.processor.AbstractConnectProcessor;
 import org.apache.commons.lang3.StringUtils;
+import org.springframework.context.ApplicationContext;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
-import java.net.URL;
-import java.util.*;
+import java.net.URI;
+import java.util.Arrays;
+import java.util.LinkedHashMap;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -29,23 +29,50 @@ import java.util.stream.Collectors;
  */
 public class ConnectProxy implements InvocationHandler {
 
+    private ApplicationContext context;
+
+    public ConnectProxy(ApplicationContext applicationContext) {
+        context = applicationContext;
+    }
+
     @Override
     public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
         Connect connect = method.getDeclaringClass().getAnnotation(Connect.class);
         AbstractConnectProcessor handler = connect.clazz().newInstance();
-        Map.Entry<String, String> entry = getHttpMethod(method);
-        String url = connect.value() + entry.getValue();
+        String url = buildUrl(connect.value());
+        RequestMapping requestMapping = method.getAnnotation(RequestMapping.class);
+        if (requestMapping == null) {
+            throw new ChyernException(ChyernErrorEnum.CONNECT_METHOD_ERROR);
+        }
+        url += requestMapping.value();
         buildUrlByPath(url, method, args);
         buildUrlByQuery(url, method, args);
         Object body = getBody(method, args);
-        Class<?> returnType = method.getReturnType();
+
         Field[] declaredFields = AbstractConnectProcessor.class.getDeclaredFields();
         Arrays.stream(declaredFields).forEach(field -> field.setAccessible(true));
-        declaredFields[1].set(handler, new URL(url));
-        declaredFields[2].set(handler, entry.getKey());
+        declaredFields[1].set(handler, new URI(url));
+        declaredFields[2].set(handler, requestMapping.method().name());
         declaredFields[4].set(handler, body);
-        declaredFields[5].set(handler, returnType);
+        declaredFields[5].set(handler, method.getReturnType());
         return handler.execute();
+    }
+
+    private String buildUrl(String str) {
+        if (str.startsWith("${") && str.endsWith("}")) {
+            String key = StringUtils.substringBetween(str, "${", "}");
+            String[] split = key.split(":");
+            if (context.getEnvironment().containsProperty(split[0])) {
+                return context.getEnvironment().getProperty(split[0]);
+            } else {
+                if (split.length < 2) {
+                    throw new ChyernException(ChyernErrorEnum.CONNECT_URL_ERROR);
+                }
+                return StringUtils.substringAfter(key, ":");
+            }
+        } else {
+            return str;
+        }
     }
 
     private void buildUrlByPath(String url, Method method, Object[] args) {
@@ -78,11 +105,11 @@ public class ConnectProxy implements InvocationHandler {
         }
         if (queries.size() > 0) {
             String queryStr = StringUtils.join(queries.entrySet().stream().map(query -> query.getKey() + "=" + query.getValue()).collect(Collectors.toList()), "&");
-            url = url + "?" + queryStr;
+            url += ("?" + queryStr);
         }
     }
 
-    private Object getBody(Method method, Object[] args) throws Throwable {
+    private Object getBody(Method method, Object[] args) {
         Object obj = null;
         Annotation[][] parameterAnnotations = method.getParameterAnnotations();
         for (int i = 0; i < parameterAnnotations.length; i++) {
@@ -99,31 +126,4 @@ public class ConnectProxy implements InvocationHandler {
         return obj;
     }
 
-
-    private Map.Entry<String, String> getHttpMethod(Method method) throws Throwable {
-        List<Class<? extends Annotation>> classes = Arrays.asList(GET.class, POST.class, PUT.class, DELETE.class);
-        List<Class<? extends Annotation>> collect = classes.stream().filter(method::isAnnotationPresent).collect(Collectors.toList());
-        if (collect.size() != 1) {
-            throw new ChyernException(ChyernErrorEnum.CONNECT_METHOD_ERROR);
-        }
-        Annotation annotation = method.getAnnotation(collect.get(0));
-        String httpMethod = StringUtils.substringAfterLast(annotation.annotationType().getName(), ".");
-        String value = (String) annotation.annotationType().getMethod("value").invoke(annotation);
-        return new Map.Entry<String, String>() {
-            @Override
-            public String getKey() {
-                return httpMethod;
-            }
-
-            @Override
-            public String getValue() {
-                return value;
-            }
-
-            @Override
-            public String setValue(String value) {
-                return value;
-            }
-        };
-    }
 }
